# SmartPyme

./: .gitignore  AGENTS.md  CODEX.md  ChatGPT.md  GEMINI.md  GPT.md  HERMES.md  README.md  README_OPERATIONAL_OVERLAY.md  SMARTPYME_AI_OPERATING_SYSTEM.md  agent.py  conftest.py  mcp_smartpyme_bridge.py  pyproject.toml  pytest.ini  requirements-bootstrap.txt  requirements-dev.txt  ventas_demo_bem.xlsx
.orquestador/: AUDITORIA_DOCUMENTAL_CRUZADA.md  ESTADO_ACTUAL.md  (+1 more)
PymIA/: ARCHITECTURE_GUARDRAILS.md  README.md  pyproject.toml
PymIA/docs/: INVENTARIO_CANONICO.md  README.md
PymIA/docs/arquitectura/: arquitectura-maestra.md  capability-runtime.md  domain-classification.md  entropy-routing.md  harness-engineering.md  orchestration-boundary.md  palantir-principles.md
PymIA/docs/catalogo/: atlas-sintomas-patologias.md
PymIA/docs/contratos/: contratos-clinicos-operacionales.md  evidence-chain-v1.md  owner-decision-v1.md
PymIA/docs/epistemologia/: protocolo-conversacional-hermes.md
PymIA/docs/fundamentos/: cosmovision-clinico-operacional.md  metodo-hipotetico-deductivo.md  organismo-pyme.md  primer-tiempo-logico.md
PymIA/docs/hermes/: soul.md
PymIA/docs/producto/: asertividades-operativas.md  capa-00-canal-entrada.md  protocolo-anamnesis-mvp.md
PymIA/docs/vision/: SMARTPYME_LABORATORIO_PYME_Y_ESTABILIZACION_OPERACIONAL.md  SMARTPYME_MVP_REALISTA_Y_FILOSOFIA_OPERACIONAL.md
PymIA/pymia/: __init__.py
PymIA/pymia/cli/: __init__.py  demo.py
PymIA/pymia/contracts/: __init__.py  admission_v1.py
PymIA/pymia/hermes/: __init__.py  adapter.py
PymIA/pymia/interfaces/: __init__.py  conversational_port.py
PymIA/pymia/pipeline/: __init__.py
PymIA/pymia/pipeline/admission/: __init__.py
PymIA/pymia/pipeline/admission/v1/: __init__.py  heuristics.py  pipeline.py  response_formatter.py
PymIA/pymia/services/: __init__.py  initial_laboratory_anamnesis_service.py
PymIA/tests/: __init__.py  test_architecture_guardrails.py
PymIA/tests/architecture/: __init__.py  policy.py  test_forbidden_imports.py  test_forbidden_terms.py
PymIA/tests/hermes/: __init__.py  test_hermes_adapter.py
PymIA/tests/interfaces/: __init__.py  test_conversational_port.py
PymIA/tests/pipeline/: __init__.py  test_admission_pipeline_v1.py  test_admission_response_formatter_v1.py
PymIA/tests/services/: __init__.py  test_initial_laboratory_anamnesis_service.py
(+1493 files in other folders)
